# wannier-optics

./: ReadMe.md  dependencies.txt
python-scripts/: pyproject.toml  wo-absorption.py  wo-tight-binding.py
tutorial/01_Si/: ReadMe.md
wo-coulomb/: CMakeLists.txt  ReadMe.md  confGenerator.h  main.cpp  potential.h  scheduler.h  screening_test.py  solver.h
wo-coulomb/bench/: README.md  bench_coulomb.cpp  bench_lfe_density.cpp  bench_pre_fft_gpu.cpp  run_benchmarks.py  run_benchmarks.sh  run_tutorial_benchmarks.py
wo-coulomb/include/: algebra.h  confGenerator.h  density.h  determinism.h  filehandler.h  meshgrid.h  scheduler.h  solver.h  timing.h  utils.h  wannierfunction.h
wo-coulomb/include/backend/: backend.h  density_metrics.h  fft_executor.h  pre_fft_density.h  transition_dipole.h
wo-coulomb/include/backend/cpu/: solver_cpu.h
wo-coulomb/include/backend/gpu/: solver_gpu_factory.h
wo-coulomb/include/testsupport/: generator.h
wo-coulomb/src/: main.cpp
wo-coulomb/src/backend/: backend_factory.cpp
wo-coulomb/src/backend/cpu/: backend_cpu.cpp  density_metrics_cpu.cpp  fft_executor_fftw.cpp  pre_fft_density_cpu.cpp  transition_dipole_cpu.cpp
wo-coulomb/src/backend/gpu/: backend_gpu.cpp  density_metrics_gpu.cpp  density_metrics_kernels.cu  density_metrics_kernels.h  fft_executor_cufft.cpp  pre_fft_density_gpu.cu  solver_gpu.cu  transition_dipole_gpu.cu
wo-coulomb/tests/: CMakeLists.txt  CorrectnessSmallMediumTest.cpp  DensityTest.cpp  FourierShiftTest.cpp  GpuCpuFftTest.cpp  GpuSolverParityTest.cpp  ImplementationCoulombSolverTest.cpp  ImplementationTest.cpp  LocalFieldEffectsTest.cpp  MeshgridTest.cpp  OpticalDipoleTest.cpp  README.md  SchedulerTest.cpp  WannierfunctionTest.cpp  XSF_controllerTest.cpp  run_correctness.sh  tests.cpp
wo-coulomb/tests/data/: coulomb_medium.txt  coulomb_small.txt
wo-coulomb/tests/testsupport/: tolerance.h
wo-optics/: hamiltonian.f90
